@@ -263,14 +263,16 @@ sub send_mail {
 	# just yet.
 	my @mail = split /\x0D\x0A/, $args{data};
 
-	$self->write_line(q{MAIL FROM:<} . $args{from} . '> BODY=' . $self->body_encoding);
+	my $mail_line = 'MAIL FROM:<' . $args{from} . '>';
+	$mail_line .= ' BODY=' . $self->body_encoding if $self->body_encoding;
+	$self->write_line($mail_line);
 	$self->wait_for(250)
 	->then(sub {
 		fmap_void {
 			$self->write_line(q{RCPT TO:<} . shift . q{>});
 			# Each recipient line should be acknowledged with 250 if valid.
 			$self->wait_for(250)
-		} foreach => \@recipient;
+		} foreach => \@recipient
 	})->then(sub {
 		$self->write_line(q{DATA});
 		$self->wait_for(354)
